# rehuel

./: .gitignore  Doxyfile  LICENSE  Makefile  Makefile_lib  README.md  arma_include.hpp  cyclic_buffer.hpp  enums.hpp  erk.cpp  erk.hpp  functor.hpp  functors.hpp  guide.dox  guide.md  integrator.cpp  integrator.hpp  integrator_io.hpp  interpolate.cpp  interpolate.hpp  irk.cpp  irk.hpp  main.cpp  multistep.cpp  multistep.hpp  my_timer.hpp  newton.cpp  newton.hpp  notes.tex  odes.cpp  odes.hpp  options.hpp  output.hpp  radau.cpp  radau.hpp  rehuel.cpp  rehuel.dox  rehuel.h  rehuel.hpp  test_equations.hpp
examples/: Makefile  bench_brusselator.sh  bench_lorenz.sh  bench_robertson.sh  benchmark_examples.sh  bessel.cpp  brusselator.cpp  example_equations.cpp  lorenz.cpp  oscillator.cpp  plot_brusselator.gpl  plot_robertson.gpl  robertson.cpp  single_bz.cpp  some_timings
ode_test/: run.sh
stability_region/: Makefile  main.cpp
test/: CMakeLists.txt  Makefile  armadillo.cpp  cyclic_vector.cpp  irk.cpp  newton.cpp  test.cpp  test_interpolate.cpp  test_multistep.cpp  test_test_equations.cpp
test_adaptive_step/: Makefile  main.cpp  plot_sols.gpl
test_multistep/: plot_orders.gpl  run_multistep.sh
test_orders/: check_orders.sh  main.cpp  plot_orders.gpl
